2008-03-26  Soren Hauberg  <hauberg@gmail.com>

	* polynomial/convn.m: New tests.

2008-03-20  Ben Abbott <bpabbott@mac.com>

	* statistics/base/statistics.m: Calculate median and quantiles in
	a manner consistent with method #7 used by GNU R.
	* statistics/base/__quantile__.m, statistics/base/quantile.m,
	statistics/base/prctile.m: New functions.
	* statistics/base/Makefile.in (SOURCES): Add them to the list.
 
2008-03-25  Soren Hauberg  <hauberg@gmail.com>

	* polynomial/convn.m: New function.
	* polynomial/Makefile.in (SOURCES): Add it to the list.

2008-03-25  David Bateman  <dbateman@free.fr>

	* image/contrast.m: New function.
	* image/Makefile.in (SOURCES): Add it to the list.
	
2008-03-24  Thomas Weber  <thomas.weber.mail@gmail.com>

	* pkg/pkg.m: Allow installation of already extracted packages.

2008-03-24  David Bateman  <dbateman@free.fr>

	* general/idivide.m: New function.
	* general/Makefile.in (SOURCES): Add it to the list.

	* miscellaneous/namelengthmax.m: New function.
	* miscellaneous/Makefile.in (SOURCES): Add it to the list.

	* strings/regexptranslate.m: New function.
	* strings/Makefile.in (SOURCES): Add it to the list.

2008-03-21  David Bateman  <dbateman@free.fr>

	* specfun/reallog.m, specfun/realpow.m, specfun/realsqrt.m:
	New functions.
	* specfun/Makefile.in (SOURCES): Add them to the list.

2008-03-20  David Bateman  <dbateman@free.fr>

	* general/tril.m, general/triu.m: Fail if input is a structure.

	* miscellaneous/cast.m: Also allow cast to "char".

	* general/rotdim.m: Ensure k is an integer scale.

	* general/circshift.m: If matrix is empty fast return.

2008-03-20  Jaroslav Hajek  <highegg@localhost.localdomain>

	* linear-algebra/subspace.m: Check number of arguments, number
	of dimensions of arguments and matching dimensions.

2008-03-19  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/subspace.m: New function.
	* linear-algebra/subspace.m: New function.

2008-03-19  Emil Lucretiu  <emil@la.mine.nu>
